add images and update style.css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Sport weather forecast</title>
   </head>
   <body>
+    <img src="img/hpluslogo.svg" class="main-logo" alt="logo" />
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
