add conversion to fahrenheit

--- a/index.html
+++ b/index.html
@@ -57,22 +57,10 @@
         <h1 id="city"></h1>
         <div class="d-flex weather-temperature">
           <div class="float-left current-degrees">
-            <strong id="temperature"></strong><span class="units"> °C</span>
+            <strong id="temperature"></strong>
           </div>
         </div>
-        <h3>Activities</h3>
-        <div class="activities-list row m-0">
-          <button class="col">Solo</button><button class="col">Team</button
-          ><button class="col">All</button>
-        </div>
-        <div>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-        </div>
+        <div id="activities"></div>
       </div>
     </div>
 
