--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </form>
         <h1 id="city"></h1>
         <div class="d-flex weather-temperature">
-          <div class="current-degrees mx-auto">
+          <div class="current-degrees mx-auto mb-2">
             <strong id="temperature"></strong>
           </div>
         </div>
