--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             />
           </div>
           <div class="col-auto">
-            <input type="submit" value="Search" class="btn btn-outline-dark" />
+            <input
+              type="submit"
+              value="Search"
+              class="btn btn-outline-dark"
+              id="forecast-button"
+            />
           </div>
         </form>
         <h1 id="city"></h1>
