--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         alt="logo"
       />
       <nav class="d-flex justify-content-between col-auto">
-        <ul>
+        <ul class="m-3">
           <li>
             <a href="#">home</a>
           </li>
