change input id

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <input
                   type="search"
                   class="form-control"
-                  id="city-input"
+                  id="location"
                   placeholder="Type a city"
                   autocomplete="off"
                 />
