update index.html structure

--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
             <a href="#">people</a>
           </li>
         </ul>
-
-        <div class="search-engine col-auto p-0">
+</nav>
+        <div class="search-engine col-auto">
+          <form>
           <h3>Activity forecast</h3>
-          <div>
-            <form id="search-form" class="row m-1">
+          <div class="row">
+            <form id="search-form" >
               <label for="location" class="hidden">Location</label>
-              <div class="col-auto">
+              <div class="col-6">
                 <input
                   type="search"
                   class="form-control"
@@ -52,7 +53,7 @@
                   autocomplete="off"
                 />
               </div>
-              <div class="col-auto">
+              <div class="col-6 button">
                 <input
                   type="submit"
                   value="Search"
@@ -78,7 +79,7 @@
           </div>
           <!-- results -->
         </div>
-      </nav>
+      
     </div>
     <script src="start/main.js"></script>
   </body>
