update form in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
 </nav>
         <div class="search-engine col-auto">
-          <form>
+          <form id = "search-city">
           <h3>Activity forecast</h3>
           <div class="row">
             <form id="search-form" >
@@ -54,12 +54,12 @@
                 />
               </div>
               <div class="col-6 button">
-                <input
+                <button
                   type="submit"
                   value="Search"
                   class="btn btn-outline-dark forecast-button"
                   id="forecast-button"
-                />
+                >Search</button>
               </div>
               <div class="conditions"></div>
             </form>
