--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <h2 id="temperature"></h2>
             <h3>Activities</h3>
             <div class="options d-flex">
-              <button class="col" id="solo">Solo</button>
-              <button class="col" id="team">Team</button>
-              <button class="col selected" id="all">All</button>
+              <button class="col option" id="solo">Solo</button>
+              <button class="col option" id="team">Team</button>
+              <button class="col option selected" id="all">All</button>
             </div>
             <!-- options -->
             <div class="activities"></div>
