--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           </li>
         </ul>
 </nav>
-        <div class="search-engine col-auto">
+        <div class="search-engine col-auto mt-2">
           <form id = "search-city">
           <h3>Activity forecast</h3>
-          <div class="row">
+          <div class="row form-container mt-1">
             <form id="search-form" >
               <label for="location" class="hidden">Location</label>
-              <div class="col-6">
+              <div class="col-8">
                 <input
                   type="search"
                   class="form-control"
@@ -53,7 +53,7 @@
                   autocomplete="off"
                 />
               </div>
-              <div class="col-6 button">
+              <div class="col button">
                 <button
                   type="submit"
                   value="Search"
